[package]
name = "exchange_aggregator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.1.4", features = ["derive"] }
ezsockets = { version = "0.6.2", features = ["client", "native_client", "rustls"] }
futures = { version = "0.3", features = ["std"] }
prost = "0.12"
prost-types = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }
rustls-pemfile = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-rustls = { version = "0.24.0", optional = true }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.8", optional = true }
tonic = "0.11.0"
tonic-health = { version = "0.11.0", optional = true }
tonic-reflection = { version = "0.11.0", optional = true }
tonic-types = { version = "0.11.0", optional = true }
tonic-web = { version = "0.11.0", optional = true }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
url = "2.2.2"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
anyhow = "1"
futures-util = "0.3.25"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
